
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-5 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Fixed modCacheManager to not cache reg* calls that will cause breakage on similar calls to reg* method
- Added 'package_name' and 'metadata' fields to modTransportPackage for future development
- Fixed styling commits; also fixed bug on Package Management when not selecting default provider
- Added help buttons to Resource pages
- Moved TV categories in Resource edit page to tabpanel, also cleaned up button styling
- Fixed table styling. This is temporary until all tables are ported to ext grids. This affects welcome pane, system info, and online users.
- Fixed bug where package browser would close on ESC key
- [#MODX-1489] Allow spaces in Category names
- [#MODX-1497] Fixed username not being sent in new user email
- Fixed NOT NULL error in modManagerLog
- Revamped Package Management UI, changed Provider hooks to REST-based, massively improved downloading UI
- Fixed styling on the search page.
- Fixed styling on the actions page.
- Fixed styling on the manager logs page.
- Fixed triggerfields in windows in Safari
- Changed the text-size and and top margin of the Main Navbar Submenu span for more readability.
- [#MODX-1426] Added connect check to assist with mysql_get_server_info in setup
- Few style changes: Changed Button style text color to black - Previously it appeared that buttons were disabled. Changed Text color inside of combo boxes to black - As before it looked like the element was disabled.
- Modified the date fields to show a drop-down box rather than the date image. Changed the text-size and spacing of the Main Navbar to 12px.
- Fixed styling of the welcome panels.